
  From William Deegan:
    - Removed deprecated tools CVS, Perforce, BitKeeper, RCS, SCCS, Subversion.
    - Removed deprecated module SCons.Sig
    - Added prioritized list of xsltproc tools to docbook. The order will now be as
      follows: xsltproc, saxon, saxon-xslt, xalan  (with first being highest priority, first
      tool found is used)

  From Daniel Moody:
    - Fixed msvs.py for Visual Studio generated projects which were
      creating invalid xml for greater than and less than symbols.

  From Daniel Holth:
    - Add basic support for PyPy (by deleting __slots__ from Node with a
      metaclass on PyPy); wrap most-used open() calls in 'with' statements to
      avoid too many open files.
    - Add __main__.py for `python -m SCons` in case it is on PYTHONPATH.
    - Always use highest available pickle protocol for efficiency.

  From Alexey Klimkin:
    - Use memoization to optimize PATH evaluation across all dependencies per
      node. (PR #345)

  From M. Limber:
    - Fixed msvs.py for Visual Studio Express editions that would report
      "Error  : ValueError: invalid literal for float(): 10.0Exp".


  From Paweł Tomulik:
    - Fixed the issue with LDMODULEVERSIONFLAGS reported by Tim Jennes
      (https://pairlist4.pair.net/pipermail/scons-users/2016-May/004893.html).
      An error was causing “-Wl,Bsymbolic” being added to linker's command-line
      even when there was no specified value in LDMODULEVERSION and thus no
      need for the flags to be specified.
    - Added LoadableModule to the list of global functions (DefaultEnvironment
      builders).

  From Rick Lupton:
    - Update LaTeX scanner to understand \import and related commands

  From Richard Viney:
    - Fixed PCHPDBFLAGS causing a deprecation warning on MSVC v8 and later when
      using PCHs and PDBs together.


RELEASE 2.5.1 - Mon, 03 Nov 2016 13:37:42 -0400

  From William Deegan:
    - Add scons-configure-cache.py to packaging. It was omitted

  From Alexey Klimkin: